# internal/controllers/categories_controller.go
@@ -12,82 +12,82 @@ import (
 	"gorm.io/gorm"
 )
 
-type RolesController struct {
-	rolesRepo repository.RoleRepository
+type CategoriesController struct {
+	categoriesRepo repository.CategoryRepository
 }
 
-func NewRolesController(rolesRepo repository.RoleRepository) *RolesController {
-	return &RolesController{rolesRepo: rolesRepo}
+func NewCategoriesController(categoriesRepo repository.CategoryRepository) *CategoriesController {
+	return &CategoriesController{categoriesRepo: categoriesRepo}
 }
 
-// @description Creates a new role
-// @tags roles
+// @description Creates a new category
+// @tags categories
 // @accept json
 // @produce json
-// @param role_create_dto body dtos.RoleCreateDTO true "dto for creating a new role"
-// @success 201 {object} dtos.RoleReadDTO "returns newly created role"
+// @param category_create_dto body dtos.CategoryCreateDTO true "dto for creating a new category"
+// @success 201 {object} dtos.CategoryReadDTO "returns newly created category"
 // @failure 400 {object} dtos.ErrResp "request body in wrong format"
 // @failure 401 {object} dtos.ErrResp "unauthorized"
 // @failure 409 {object} dtos.ErrResp "unique key violation"
 // @failure 500 {object} dtos.ErrResp "internal server error"
-// @router /roles [post]
-func (rc RolesController) Create(c *gin.Context) {
+// @router /categories [post]
+func (cc CategoriesController) Create(c *gin.Context) {
 	path := c.Request.URL.Path
 
-	var body dtos.RoleCreateDTO
+	var body dtos.CategoryCreateDTO
 	if err := c.ShouldBindJSON(&body); err != nil {
 		c.JSON(http.StatusBadRequest, dtos.NewErrResp(err.Error(), path))
 		return
 	}
 
-	newRole := dtos.CreateDTOToRole(body)
-	if err := rc.rolesRepo.Create(c.Request.Context(), newRole); err != nil {
+	newCategory := dtos.CreateDTOToCategory(body)
+	if err := cc.categoriesRepo.Create(c.Request.Context(), newCategory); err != nil {
 		if errors.Is(err, gorm.ErrDuplicatedKey) {
-			c.JSON(http.StatusConflict, dtos.NewErrResp("A role with such name already exists", path))
+			c.JSON(http.StatusConflict, dtos.NewErrResp("A category with such name already exists", path))
 			return
 		}
 		c.JSON(http.StatusInternalServerError, dtos.NewErrResp(err.Error(), path))
 		return
 	}
 
-	c.JSON(http.StatusCreated, dtos.RoleToDTO(*newRole))
+	c.JSON(http.StatusCreated, dtos.CategoryToDTO(*newCategory))
 }
 
-// @description Reads all roles
-// @tags roles
+// @description Reads categories
+// @tags categories
 // @accept json
 // @produce json
-// @success 200 {array} dtos.RoleReadDTO "returns newly created role"
+// @success 200 {array} dtos.CategoryReadDTO "returns all categories"
 // @failure 401 {object} dtos.ErrResp "unauthorized"
 // @failure 500 {object} dtos.ErrResp "internal server error"
-// @router /roles [get]
-func (rc RolesController) ReadAll(c *gin.Context) {
+// @router /categories [get]
+func (rc CategoriesController) ReadAll(c *gin.Context) {
 	path := c.Request.URL.Path
 
-	res, err := rc.rolesRepo.ReadAll(c.Request.Context())
+	res, err := rc.categoriesRepo.ReadAll(c.Request.Context())
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, dtos.NewErrResp(err.Error(), path))
 		return
 	}
 
-	c.JSON(http.StatusOK, utils.Map(res, func(r models.Role) dtos.RoleReadDTO { return dtos.RoleToDTO(r) }))
+	c.JSON(http.StatusOK, utils.Map(res, func(c models.Category) dtos.CategoryReadDTO { return dtos.CategoryToDTO(c) }))
 }
 
-// @description Reads a role by it's id
-// @tags roles
+// @description Reads a category by it's id
+// @tags categories
 // @accept json
 // @produce json
-// @param id path int true "the id of the desired role"
-// @success 200 {object} dtos.RoleReadDTO "returns the desired role"
+// @param id path int true "the id of the desired category"
+// @success 200 {object} dtos.CategoryReadDTO "returns the desired category"
 // @failure 401 {object} dtos.ErrResp "unauthorized"
 // @failure 404 {object} dtos.ErrResp "record not found"
 // @failure 500 {object} dtos.ErrResp "internal server error"
-// @router /roles/{id} [get]
-func (rc RolesController) ReadByID(c *gin.Context) {
+// @router /categories/{id} [get]
+func (rc CategoriesController) ReadByID(c *gin.Context) {
 	path := c.Request.URL.Path
 	id, _ := c.Get("id")
 
-	res, err := rc.rolesRepo.ReadByID(c.Request.Context(), id.(uint))
+	res, err := rc.categoriesRepo.ReadByID(c.Request.Context(), id.(uint))
 	if err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
 			c.JSON(http.StatusNotFound, dtos.NewErrResp("Record not found", path))
@@ -97,15 +97,15 @@ func (rc RolesController) ReadByID(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, dtos.RoleToDTO(res))
+	c.JSON(http.StatusOK, dtos.CategoryToDTO(res))
 }
 
-// @description Updates the role with the given id
-// @tags roles
+// @description Updates the category with the given id
+// @tags categories
 // @accept json
 // @produce json
-// @param role_update_dto body dtos.RoleUpdateDTO true "dto for updating a role"
-// @param id path int true "id of desired role"
+// @param category_update_dto body dtos.CategoryUpdateDTO true "dto for updating a category"
+// @param id path int true "id of desired category"
 // @success 204 {} nil "doesn't return anything"
 // @failure 400 {object} dtos.ErrResp "request body in wrong format"
 // @failure 400 {object} dtos.ErrResp "id from url and id from request body doesn't match"
@@ -113,12 +113,12 @@ func (rc RolesController) ReadByID(c *gin.Context) {
 // @failure 404 {object} dtos.ErrResp "record not found"
 // @failure 409 {object} dtos.ErrResp "unique key violation"
 // @failure 500 {object} dtos.ErrResp "internal server error"
-// @router /roles/{id} [put]
-func (rc RolesController) Update(c *gin.Context) {
+// @router /categories/{id} [put]
+func (rc CategoriesController) Update(c *gin.Context) {
 	path := c.Request.URL.Path
 	id, _ := c.Get("id")
 
-	var body dtos.RoleUpdateDTO
+	var body dtos.CategoryUpdateDTO
 	if err := c.ShouldBindJSON(&body); err != nil {
 		c.JSON(http.StatusBadRequest, dtos.NewErrResp(err.Error(), path))
 		return
@@ -129,13 +129,13 @@ func (rc RolesController) Update(c *gin.Context) {
 		return
 	}
 
-	if err := rc.rolesRepo.Update(c, dtos.UpdateDTOToRole(body)); err != nil {
+	if err := rc.categoriesRepo.Update(c, dtos.UpdateDTOToCategory(body)); err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
 			c.JSON(http.StatusNotFound, dtos.NewErrResp("Record not found", path))
 			return
 		}
 		if errors.Is(err, gorm.ErrDuplicatedKey) {
-			c.JSON(http.StatusConflict, dtos.NewErrResp("Role With such name already exists", path))
+			c.JSON(http.StatusConflict, dtos.NewErrResp("Category with such name already exists", path))
 			return
 		}
 		c.JSON(http.StatusInternalServerError, dtos.NewErrResp(err.Error(), path))
@@ -145,21 +145,21 @@ func (rc RolesController) Update(c *gin.Context) {
 	c.Status(http.StatusNoContent)
 }
 
-// @description Deletes a role with the given id
-// @tags roles
+// @description Deletes a category with the given id
+// @tags categories
 // @accept json
 // @produce json
-// @param id path int true "id of desired role"
+// @param id path int true "id of desired category"
 // @success 204 {} nil "doesn't return anything"
 // @failure 401 {object} dtos.ErrResp "unauthorized"
 // @failure 404 {object} dtos.ErrResp "record not found"
 // @failure 500 {object} dtos.ErrResp "internal server error"
-// @router /roles/{id} [delete]
-func (rc RolesController) Delete(c *gin.Context) {
+// @router /categories/{id} [delete]
+func (rc CategoriesController) Delete(c *gin.Context) {
 	path := c.Request.URL.Path
 	id, _ := c.Get("id")
 
-	if err := rc.rolesRepo.Delete(c, id.(uint)); err != nil {
+	if err := rc.categoriesRepo.Delete(c, id.(uint)); err != nil {
 		if errors.Is(err, gorm.ErrRecordNotFound) {
 			c.JSON(http.StatusNotFound, dtos.NewErrResp("Record not found", path))
 			return
